Fixed z-index bug on index post-feed Closes https://github.com/TryGhost/Casper/issues/349, closes https://github.com/TryGhost/Casper/pull/350

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -358,6 +358,10 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 /* 6. Post Feed
 /* ---------------------------------------------------------- */
 
+.site-main {
+    z-index: 100;
+}
+
 .post-feed {
     position: relative;
     display: flex;
